--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,31 @@
 {
-    "name": "yiisoft/yii2-app-advanced",
-    "description": "Yii 2 Advanced Project Template",
-    "keywords": ["yii2", "framework", "advanced", "project template"],
-    "homepage": "http://www.yiiframework.com/",
+    "name": "rhosocial/yii2-app-advanced",
+    "description": "Yii 2 Advanced Project Template (Developed by rhosocial)",
+    "keywords": ["yii2", "framework", "advanced", "project template", "rhosocial"],
+    "homepage": "https://dev.rho.social/",
     "type": "project",
-    "license": "BSD-3-Clause",
-    "support": {
-        "issues": "https://github.com/yiisoft/yii2/issues?state=open",
-        "forum": "http://www.yiiframework.com/forum/",
-        "wiki": "http://www.yiiframework.com/wiki/",
-        "irc": "irc://irc.freenode.net/yii",
-        "source": "https://github.com/yiisoft/yii2"
-    },
+    "license": "AGPLv3",
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.4.0",
-        "yiisoft/yii2": "~2.0.6",
-        "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0"
+        "php": ">=5.6.0",
+        "yiisoft/yii2": "~2.0.12",
+        "yiisoft/yii2-bootstrap": "~2.0.6",
+        "yiisoft/yii2-swiftmailer": "~2.0.6",
+        "rhosocial/helpers": "^1.0",
+        "rhosocial/yii2-base-models": ">=1.0.0",
+        "rhosocial/yii2-user": "dev-master",
+        "rhosocial/yii2-organization": "dev-master",
+        "kartik-v/yii2-widget-datetimepicker": "*",
+        "yiisoft/yii2-redis": "*"
     },
     "require-dev": {
-        "yiisoft/yii2-debug": "~2.0.0",
-        "yiisoft/yii2-gii": "~2.0.0",
-        "yiisoft/yii2-faker": "~2.0.0",
+        "yiisoft/yii2-debug": "~2.0.9",
+        "yiisoft/yii2-gii": "~2.0.5",
+        "yiisoft/yii2-faker": "~2.0.3",
 
         "codeception/base": "^2.2.3",
-        "codeception/verify": "~0.3.1"
+        "codeception/verify": "~0.3.1",
+        "codeception/specify": "~0.4.3"
     },
     "config": {
         "process-timeout": 1800,
